--- a/index.html
+++ b/index.html
@@ -3,5 +3,16 @@
 <body>
 <h1>Hello World</h1>
 <p style="color:red">I'm hosted with GitHub Pages.</p>
+
+
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
+
+
 </body>
 </html>
