--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p style="color:red">I'm hosted with GitHub Pages.</p>
-
-
+　  ---
+　　layout: default
+　　title: 我的Blog
+　　---
+　　<h2>{{ page.title }}</h2>
+　　<p>最新文章</p> 
 <ul>
   {% for post in site.posts %}
     <li>
@@ -12,7 +11,3 @@
     </li>
   {% endfor %}
 </ul>
-
-
-</body>
-</html>
