--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-　　---
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+</head>
+<body>
+ 　　---
 　　layout: default
 　　title:  
 　　---
@@ -11,3 +17,5 @@
     </li>
   {% endfor %}
 </ul>
+</body>
+</html>
