--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@
 　　　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 　　　　{% endfor %}
 　　</ul>
+
+ ${page} AA
